# LCD-Content-Formatter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HD44780.py  LICENSE  README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml  release.yml
lcd_content_formatter/: __init__.py  _driver.py  display.py  exceptions.py  frame.py
sample/: config.py  sample.py  sampleFunctions.py  sample_functions.py
tests/: test_display.py  test_driver.py  test_frame.py
